; ModuleID = '/home/carl/AnghaBench/mpv/video/out/d3d11/extr_ra_d3d11.c_ra_d3d11_get_device.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/d3d11/extr_ra_d3d11.c_ra_d3d11_get_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ra = type { %struct.ra_d3d11* }
%struct.ra_d3d11 = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ra_d3d11_get_device(%struct.ra* %0) #0 {
  %2 = alloca %struct.ra*, align 8
  %3 = alloca %struct.ra_d3d11*, align 8
  store %struct.ra* %0, %struct.ra** %2, align 8
  %4 = load %struct.ra*, %struct.ra** %2, align 8
  %5 = getelementptr inbounds %struct.ra, %struct.ra* %4, i32 0, i32 0
  %6 = load %struct.ra_d3d11*, %struct.ra_d3d11** %5, align 8
  store %struct.ra_d3d11* %6, %struct.ra_d3d11** %3, align 8
  %7 = load %struct.ra_d3d11*, %struct.ra_d3d11** %3, align 8
  %8 = getelementptr inbounds %struct.ra_d3d11, %struct.ra_d3d11* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = call i32 @ID3D11Device_AddRef(i32* %9)
  %11 = load %struct.ra_d3d11*, %struct.ra_d3d11** %3, align 8
  %12 = getelementptr inbounds %struct.ra_d3d11, %struct.ra_d3d11* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  ret i32* %13
}

declare dso_local i32 @ID3D11Device_AddRef(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
